<resources>
    <string name="app_name">OneDayJob</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_verification">Verify</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_mailbox">Mailbox</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_gps">Gps</string>
    <string name="title_activity_job_management">Job management</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email adresa nije valjana</string>
    <string name="error_invalid_password">Password nije valjan</string>
    <string name="error_incorrect_password">Password ne odgovara korisničkom imenu</string>
    <string name="error_field_required">Obavezno polje</string>
    <string name="permission_rationale">Potrebna je dozvola pristupu kontaktima za pomoć pri upisu maila</string>
    <string name="signIn">Sign in</string>
    <string name="register">Register</string>
    <string name="kratki_opis">Kratki opis</string>
    <string name="broj_mobitela">Broj mobitela</string>
    <string name="mail">Mail</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="zaporka">Zaporka</string>
    <string name="ponovi_zaporku">Ponovi Zaporku</string>
    <string name="datum_ro_enja">Datum rođenja</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_the_main">OneDayJob</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_photo">add photo</string>

    <string-array name="category_arrays">
        <item>Kategorija</item>
    </string-array>


</resources>
